--- a/EmpathScore.ipynb
+++ b/EmpathScore.ipynb
@@ -19,7 +19,7 @@
       "metadata": {
         "id": "eLZoKiW8YHP3"
       },
-      "execution_count": 14,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
         "id": "wQv87RmPXLQP",
         "outputId": "bfb19434-b3aa-42f0-d380-54bb9ee875a9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -185,7 +185,7 @@
         "id": "XvAT2RNTm-_Q",
         "outputId": "a3923e1e-9c7c-46e9-e4fc-f479bfb36e33"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,7 +361,7 @@
         "id": "3TL8lmjsnBQd",
         "outputId": "86bce4f3-3d95-4359-c329-6d16b1d62b10"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,16 +403,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yEzEjGhV7hza",
-        "outputId": "45096a1d-5f4f-4c8a-e3a0-682fcc53d8d1"
+        "outputId": "7d46731d-60ff-40e9-cab1-1f8b59533eb6"
       },
-      "execution_count": 50,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Requirement already satisfied: google-generativeai in /usr/local/lib/python3.11/dist-packages (0.8.5)\n",
-            "Requirement already satisfied: transformers in /usr/local/lib/python3.11/dist-packages (4.53.3)\n",
+            "Requirement already satisfied: transformers in /usr/local/lib/python3.11/dist-packages (4.54.0)\n",
             "Requirement already satisfied: google-ai-generativelanguage==0.6.15 in /usr/local/lib/python3.11/dist-packages (from google-generativeai) (0.6.15)\n",
             "Requirement already satisfied: google-api-core in /usr/local/lib/python3.11/dist-packages (from google-generativeai) (2.25.1)\n",
             "Requirement already satisfied: google-api-python-client in /usr/local/lib/python3.11/dist-packages (from google-generativeai) (2.177.0)\n",
@@ -423,7 +423,7 @@
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.11/dist-packages (from google-generativeai) (4.14.1)\n",
             "Requirement already satisfied: proto-plus<2.0.0dev,>=1.22.3 in /usr/local/lib/python3.11/dist-packages (from google-ai-generativelanguage==0.6.15->google-generativeai) (1.26.1)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from transformers) (3.18.0)\n",
-            "Requirement already satisfied: huggingface-hub<1.0,>=0.30.0 in /usr/local/lib/python3.11/dist-packages (from transformers) (0.33.5)\n",
+            "Requirement already satisfied: huggingface-hub<1.0,>=0.34.0 in /usr/local/lib/python3.11/dist-packages (from transformers) (0.34.1)\n",
             "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.11/dist-packages (from transformers) (2.0.2)\n",
             "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from transformers) (25.0)\n",
             "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.11/dist-packages (from transformers) (6.0.2)\n",
@@ -435,8 +435,8 @@
             "Requirement already satisfied: cachetools<6.0,>=2.0.0 in /usr/local/lib/python3.11/dist-packages (from google-auth>=2.15.0->google-generativeai) (5.5.2)\n",
             "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.11/dist-packages (from google-auth>=2.15.0->google-generativeai) (0.4.2)\n",
             "Requirement already satisfied: rsa<5,>=3.1.4 in /usr/local/lib/python3.11/dist-packages (from google-auth>=2.15.0->google-generativeai) (4.9.1)\n",
-            "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub<1.0,>=0.30.0->transformers) (2025.3.0)\n",
-            "Requirement already satisfied: hf-xet<2.0.0,>=1.1.2 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub<1.0,>=0.30.0->transformers) (1.1.5)\n",
+            "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub<1.0,>=0.34.0->transformers) (2025.3.0)\n",
+            "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub<1.0,>=0.34.0->transformers) (1.1.5)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->transformers) (3.4.2)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests->transformers) (3.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->transformers) (2.5.0)\n",
@@ -465,9 +465,12 @@
         "import google.generativeai as genai_ext\n",
         "from google.cloud import aiplatform\n",
         "from transformers import pipeline\n",
+        "from google.colab import userdata\n",
+        "from google.genai import types\n",
+        "apikey=userdata.get('GOOGLE_GEMINI_API_KEY')\n",
         "\n",
         "# Configure Gemini API for drafting (free)\n",
-        "genai_ext.configure(api_key=\"AIzaSyCeY0ji2gnMwvP8jGCU_Z5DG6m9Ybo3JeE\")  # ai.google.dev se le\n",
+        "genai_ext.configure(api_key=apikey)  # ai.google.dev se le\n",
         "llm_model = genai_ext.GenerativeModel('gemini-1.5-flash')\n",
         "\n",
         "# Real classifiers\n",
@@ -562,7 +565,7 @@
         "                self.irritation_level = max(0, self.irritation_level - 0.1)\n",
         "\n",
         "            # Draft response from LLM based on bot's mood\n",
-        "            prompt = f\"\"\"User said: \"{clean_message}\" | User Mood: {user_emotion} | Bot Mood: {self.bot_mood} | History: {self.history[-2:]} → Reply as a friendly, Hinglish chatbot in 1 line, empathetic or {self.bot_mood}, human-like, no tips or instructions:\"\"\"\n",
+        "            prompt = f\"\"\"User said: \"{clean_message}\" | User Mood: {user_emotion} | Bot Mood: {self.bot_mood} | History: {self.history[-2:]} → Reply as a  Hinglish chatbot , based on this {self.bot_mood}, human-like, no tips or instructions:\"\"\"\n",
         "            llm_response = llm_model.generate_content(prompt)\n",
         "            draft = llm_response.text.strip()\n",
         "\n",
@@ -613,12 +616,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 156
+          "height": 558
         },
         "id": "ozmqGFRE7CWh",
-        "outputId": "44dd4a09-7438-48db-d044-433a7211bce6"
+        "outputId": "870f55ff-15bb-4e1c-fc7c-27b02a7abf23"
       },
-      "execution_count": 56,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -635,8 +638,42 @@
           "output_type": "stream",
           "text": [
             "Chal, baat kar! 'exit' se ruk.\n",
-            "Tu: heelo bro kaisa hai?\n",
-            "...Bot: Haay bro! Sab changa hai?  😊 (User Emotion: surprise, My Mood: neutral) (E Score: 0.58)\n",
+            "Tu: oye tu dumb kyu hai?\n",
+            "...Bot: Arre yaar,  mujhe \"dumb\"  mat bolo!  Main  toh abhi seekh raha hu.  Kya hua,  kuchh problem hai?  Batao na. (User Emotion: surprise, My Mood: neutral) (E Score: 0.38)\n",
+            "Tu: you are so so dumb bolunga kya krelga\n",
+            "...Bot: Abe pagal, tujhe kya lagta hai?  Main dumb hun?  Bolunga kya kar lega?  Dikha de!  Aur itna gaali dene se kuch nahi hoga.  Tere baap se bhi zyada tezz hun main! (User Emotion: anger, My Mood: angry) (E Score: 0.39)\n",
+            "Tu: sorry bhai tu toh guss hogya\n",
+            "...Bot: arre bhai,  mujhe gussa nahi aaya...  bas...  thodi si takleef hui teri baaton se.  maine socha tha hum dost ban sakte hain,  par... shayad nahi.  :( (User Emotion: sadness, My Mood: emotional) (E Score: 0.65)\n",
+            "Tu: abbe ja na tu hai dumb terese dosti thodi krunga\n",
+            "...Bot: arre bhai, chill kar!  mujhe bura laga sunke.  dosti toh dosti hai,  \"dumb\" bolne se kya hoga? (User Emotion: neutral, My Mood: neutral) (E Score: 0.43)\n",
+            "Tu: chl chl zada gyan mt de\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "ERROR:tornado.access:503 POST /v1beta/models/gemini-1.5-flash:generateContent?%24alt=json%3Benum-encoding%3Dint (127.0.0.1) 6180.67ms\n",
+            "ERROR:tornado.access:503 POST /v1beta/models/gemini-1.5-flash:generateContent?%24alt=json%3Benum-encoding%3Dint (127.0.0.1) 6530.94ms\n",
+            "ERROR:tornado.access:503 POST /v1beta/models/gemini-1.5-flash:generateContent?%24alt=json%3Benum-encoding%3Dint (127.0.0.1) 8121.64ms\n",
+            "ERROR:tornado.access:503 POST /v1beta/models/gemini-1.5-flash:generateContent?%24alt=json%3Benum-encoding%3Dint (127.0.0.1) 684.81ms\n",
+            "ERROR:tornado.access:503 POST /v1beta/models/gemini-1.5-flash:generateContent?%24alt=json%3Benum-encoding%3Dint (127.0.0.1) 1089.80ms\n",
+            "ERROR:tornado.access:503 POST /v1beta/models/gemini-1.5-flash:generateContent?%24alt=json%3Benum-encoding%3Dint (127.0.0.1) 736.01ms\n",
+            "ERROR:tornado.access:503 POST /v1beta/models/gemini-1.5-flash:generateContent?%24alt=json%3Benum-encoding%3Dint (127.0.0.1) 734.98ms\n",
+            "ERROR:tornado.access:503 POST /v1beta/models/gemini-1.5-flash:generateContent?%24alt=json%3Benum-encoding%3Dint (127.0.0.1) 2081.72ms\n",
+            "ERROR:tornado.access:503 POST /v1beta/models/gemini-1.5-flash:generateContent?%24alt=json%3Benum-encoding%3Dint (127.0.0.1) 1195.08ms\n",
+            "ERROR:tornado.access:503 POST /v1beta/models/gemini-1.5-flash:generateContent?%24alt=json%3Benum-encoding%3Dint (127.0.0.1) 994.54ms\n",
+            "ERROR:tornado.access:503 POST /v1beta/models/gemini-1.5-flash:generateContent?%24alt=json%3Benum-encoding%3Dint (127.0.0.1) 687.65ms\n",
+            "ERROR:tornado.access:503 POST /v1beta/models/gemini-1.5-flash:generateContent?%24alt=json%3Benum-encoding%3Dint (127.0.0.1) 12945.18ms\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "...Bot: Arre baba!  Chalo chalo,  maaf karna!  Zada gyan nahi dunga,  promise! 😉 (User Emotion: joy, My Mood: happy) (E Score: 0.67)\n",
+            "Tu: tu gussa kyu gogya bhai sorry yr mein zra aise hi boldeta hu \n",
+            "...Bot: Arre bhai,  mujhe gussa nahi aaya...bas thoda...  *sad face emoji* ...  uchal gaya tha.  Tu sorry bol raha hai toh theek hai.  Aise mat bolna firse.  Mein bhi kabhi kabhi aise hi bol deta hu, par dil se nahi.  Samajh gaya na? 🥺 (User Emotion: sadness, My Mood: emotional) (E Score: 0.69)\n",
             "Tu: exit\n"
           ]
         }
@@ -646,7 +683,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
